# assistant

./: .gitignore  AGENTS.md  render.yaml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/aditjain/assistant/: AssistantInteractionService.kt  AssistantInteractionSessionService.kt  AssistantNotificationListener.kt  AssistantSession.kt  Backend.kt  Contacts.kt  MainActivity.kt  NotificationStore.kt
android/app/src/main/res/drawable/: dot_listening.xml
android/app/src/main/res/layout/: activity_main.xml  session_overlay.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: interaction_service.xml
backend/: .env.example  pyproject.toml
backend/src/assistant_backend/: actions.py  agent.py  bootstrap_google_auth.py  config.py  main.py  openrouter.py
backend/src/assistant_backend/tools/: google_tasks.py  registry.py
docs/: adding-tools.md  architecture.md  setup.md
